--- a/Ver/index.html
+++ b/Ver/index.html
@@ -3,76 +3,99 @@
 
 <head>
    <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Лига Ставок</title>
+   <title>Document</title>
    <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/reset.css">
    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-   <header class="header">
-      <div class="container">
-         <div class="header-logo">
-            <a href="#" class="header-logo-link">
-               <svg class="header-logo-pic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144 44" width="144"
-                  height="44">
-                  <path
-                     d="M67.34,24.092h-3.956c-1.579,0-2.863,1.284-2.863,2.863V41.13c0,1.659,1.204,2.863,2.863,2.863h3.956    c1.579,0,2.863-1.284,2.863-2.863v-3.742H67.14v3.161c0,0.347-0.282,0.629-0.629,0.629h-2.2c-0.347,0-0.628-0.282-0.628-0.629    V27.476c0-0.347,0.282-0.629,0.628-0.629h2.2c0.347,0,0.629,0.282,0.629,0.629v3.375h3.063v-3.895    C70.202,25.377,68.918,24.092,67.34,24.092z">
-                  </path>
-                  <polygon
-                     points="80.381,28.052 71.405,28.052 71.405,30.851 74.361,30.851 74.361,43.999 77.424,43.999     77.424,30.851 80.381,30.851   ">
-                  </polygon>
-                  <polygon
-                     points="30.911,37.012 30.612,37.012 30.61,28.053 27.549,28.053 27.549,43.999 30.243,43.999 33.6,35.453     33.899,35.453 33.899,43.998 36.962,43.998 36.962,28.053 34.232,28.053   ">
-                  </polygon>
-                  <polygon
-                     points="17.693,24.089 13.953,43.995 17.194,43.995 19.756,27.329 20.055,27.329 22.73,43.995 25.98,43.995     22.27,24.089   ">
-                  </polygon>
-                  <path
-                     d="M83.466,28.052l-3.337,15.947h3.08l0.38-2.04h4.099l0.376,2.04h3.089l-3.318-15.947H83.466z M84.083,39.313    l1.423-8.461h0.289l1.406,8.461H84.083z">
-                  </path>
-                  <path
-                     d="M48.683,28.052l-3.337,15.947h3.08l0.38-2.04h4.099l0.376,2.04h3.089l-3.318-15.947H48.683z M49.299,39.313    l1.423-8.461h0.289l1.406,8.461H49.299z">
-                  </path>
-                  <polygon
-                     points="46.191,28.052 39.252,28.052 39.252,43.998 42.315,43.998 42.315,30.852 46.191,30.852   ">
-                  </polygon>
-                  <path
-                     d="M109.761,28.052h-3.385c-1.578,0-2.862,1.284-2.862,2.863v10.221c0,1.578,1.284,2.862,2.862,2.862h3.385    c1.578,0,2.862-1.284,2.862-2.862V30.915C112.623,29.336,111.339,28.052,109.761,28.052z M109.561,40.555    c0,0.347-0.282,0.629-0.628,0.629h-1.728c-0.347,0-0.629-0.282-0.629-0.629v-9.06c0-0.347,0.282-0.629,0.629-0.629h1.728    c0.347,0,0.628,0.287,0.628,0.64V40.555z">
-                  </path>
-                  <polygon points="0,0 0,44 8.47,44 8.47,8.03 129.03,8.03 129.03,44 137.5,44 137.5,0   ">
-                  </polygon>
-                  <polygon
-                     points="124.551,28.052 121.249,28.052 118.481,34.82 117.95,34.82 117.95,28.052 114.913,28.052     114.913,43.999 117.95,43.999 117.95,37.467 118.602,37.467 121.414,43.999 124.721,43.999 121.174,36.002   ">
-                  </polygon>
-                  <path
-                     d="M99.453,36.207v-0.298H99.45c1.184-0.246,2.076-1.301,2.076-2.561l0-0.001v-2.443    c0-1.573-1.284-2.852-2.862-2.852H92.72v15.946h6.085c1.579,0,2.863-1.284,2.863-2.862v-2.254l0-0.001    C101.669,37.555,100.713,36.449,99.453,36.207z M95.783,30.857h2.051c0.347,0,0.629,0.282,0.629,0.629v2.709    c0,0.347-0.282,0.629-0.629,0.629h-2.051V30.857z M98.606,40.555c0,0.347-0.282,0.629-0.629,0.629h-2.195V37.47h2.195    c0.347,0,0.629,0.282,0.629,0.629V40.555z">
-                  </path>
-               </svg>
-            </a>
+   <div class="wrapper">
+      <header id="header" class="header">
+         <div class="container">
+            <div class="header-inner">
+               <div class="header-info">
+                  <div class="header-title">
+                     <h1>Поездки из <span>Уфы</span><br>в <span>Нижневартовск</span><br>и обратно</h1>
+                  </div>
+                  <a href="#popup" class="header-btn btn">Поехать</a>
+                  <a href="tel:89631406000" class="header-btn-mob btn">Поехать</a>
+                  <div class="header-text">
+                     <span>Промежутки</span><br>
+                     Юрюзань Сатка Златоуст Челябинск Шумиха Юргамыш Курган Исетское Тюмень
+                     Тобольск
+                     Уват Салым Пыть-Ях Нефтеюганск Сургут Лангепас Мегион
+                  </div>
+               </div>
+               <div class="header-car">
+                  <img src="images/header-car.png" alt="">
+               </div>
+            </div>
+
          </div>
-         <div class="header-inner">
-            <div class="header-info">
-               <div class="header-title">
-                  <h1>до <span>3000 ₽</span><br>НОВЫМ ИГРОКАМ</h1>
+      </header>
+      <section class="benefits">
+         <div class="container">
+            <div class="benefits-inner">
+               <div class="benefits-left">
+                  <div class="benefits-title">
+                     Также перевозим
+                  </div>
+                  <div class="benefits-text">
+                     <p>🐶 Животных</p>
+                     <p>📄 Документы</p>
+                     <p>🌿 Растения</p>
+                  </div>
                </div>
-               <div class="header-subtitle">
-                  <span class="header-subtitle-span">удвоим</span> первую интерактивную ставку<span
-                     class="header-subtitle-zv">**</span>
-               </div>
-               <div class="header-btn">
-                  <a href="#" class="header-btn-link">сделать ставку</a>
+               <div class="benefits-right">
+                  <div class="benefits-title">
+                     Удобства
+                  </div>
+                  <div class="benefits-text">
+                     <p>💺 Мягкие откидные сиденья</p>
+                     <p>💺 Мягкие откидные сиденья</p>
+                     <p>💺 Мягкие откидные сиденья</p>
+                  </div>
                </div>
             </div>
-            <div class="header-images">
-               <img src="images/header-images.png" alt="">
+         </div>
+      </section>
+      <footer class="footer">
+         <div class="container">
+            <div class="footer-title">
+               <div class="footer-title">
+                  Гарантии
+               </div>
+               <div class="footer-text">
+                  <p>🚐 Два водителя</p>
+                  <p>😷 Водитель перед рейсом проходит медосмотр</p>
+                  <p>🔧 Автомобиль проходит проверку тех. состояния</p>
+                  <p>💵 Каждое посадочное место застраховано</p>
+               </div>
+               <a href="#popup" class="footer-btn">Поехать</a>
+               <a href="tel:89631406000" class="footer-btn-mob">Поехать</a>
             </div>
+         </div>
+      </footer>
+   </div>
+   <div id="popup" class="popup">
+      <a href="#" class="popup-area"></a>
+      <div class="popup-body">
+         <div class="popup-content">
+            <a href="#header" class="popup-close">
+               <img src="images/close-x.svg" alt="">
+            </a>
+            <div class="popup-text">
+               Позвоните нашему диспетчеру
+            </div>
+            <a href="tel:89631406000" class="popup-phone">8 963 140 60 00</a>
          </div>
       </div>
-   </header>
+   </div>
 </body>
 
 </html>
