--- a/verstcka-hunt/index.html
+++ b/verstcka-hunt/index.html
@@ -46,9 +46,9 @@
                      Также перевозим
                   </div>
                   <div class="benefits-text">
-                     🐶 Животных<br>
-                     📄 Документы<br>
-                     🌿 Растения<br>
+                     <p>🐶 Животных</p>
+                     <p>📄 Документы</p>
+                     <p>🌿 Растения</p>
                   </div>
                </div>
                <div class="benefits-right">
@@ -56,9 +56,9 @@
                      Удобства
                   </div>
                   <div class="benefits-text">
-                     💺 Мягкие откидные сиденья<br>
-                     🌬 Кондиционер<br>
-                     📺 Телевизор<br>
+                     <p>💺 Мягкие откидные сиденья</p>
+                     <p>💺 Мягкие откидные сиденья</p>
+                     <p>💺 Мягкие откидные сиденья</p>
                   </div>
                </div>
             </div>
@@ -87,7 +87,7 @@
       <div class="popup-body">
          <div class="popup-content">
             <a href="#header" class="popup-close">
-               х
+               <img src="images/close-x.svg" alt="">
             </a>
             <div class="popup-text">
                Позвоните нашему диспетчеру
