--- a/verstcka-hunt/index.html
+++ b/verstcka-hunt/index.html
@@ -57,8 +57,8 @@
                   </div>
                   <div class="benefits-text">
                      <p>💺 Мягкие откидные сиденья</p>
-                     <p>💺 Мягкие откидные сиденья</p>
-                     <p>💺 Мягкие откидные сиденья</p>
+                     <p>🌬 Кондиционер</p>
+                     <p>📺 Телевизор</p>
                   </div>
                </div>
             </div>
@@ -83,9 +83,12 @@
       </footer>
    </div>
    <div id="popup" class="popup">
-      <a href="#" class="popup-area"></a>
+      <a href="#popup" class="popup-area"></a>
       <div class="popup-body">
          <div class="popup-content">
+
+         </div>
+         <div class="popup-info">
             <a href="#header" class="popup-close">
                <img src="images/close-x.svg" alt="">
             </a>
