--- a/git/index.html
+++ b/git/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>TERRA</title>
+   <title>Аренда 1С в облаке </title>
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet">
@@ -126,15 +126,20 @@
                      <div class="rules-form-item-point">
                         <label class="rules-form-label">Ваш статус?</label>
                         <label for="radio-3" class="rules-form-radio radio-block">
-                           <input type="radio" name="demo" value="1" id="radio-3" required>
+                           <input type="radio" name="demo2" value="1" id="radio-3" required>
                            <span class="radio"></span>
                            <lable class="form-label-radio">Запуск (для предпринимателей до 300 тыс./мес.)</lable>
                         </label>
                         <label for="radio-4" class="rules-form-radio radio-block">
-                           <input type="radio" name="demo" value="1" id="radio-4" required>
+                           <input type="radio" name="demo2" value="1" id="radio-4" required>
+                           <span class="radio"></span>
+                           <lable class="form-label-radio">Прорыв (300+ тыс./мес.)</lable>
+                        </label>
+                        <!-- <label for="radio-4" class="rules-form-radio radio-block">
+                           <input type="radio" name="demo2" value="1" id="radio-4" required>
                            <span class="radio"></span>
                            <label class="form-label-radio">Прорыв (300+ тыс./мес.)</label>
-                        </label>
+                        </label> -->
                      </div>
                   </div>
                   <div class="rules-form-item">
