--- a/git/index.html
+++ b/git/index.html
@@ -94,30 +94,125 @@
                         <input class="rules-form-field" type="text" placeholder="@username" required>
                      </div>
                   </div>
-                  <!-- <div class="rules-form-item">
+                  <div class="rules-form-item">
                      <div class="rules-form-item-difference">
                         <label class="rules-form-label">Сколько раз проходили наставничество в Терре?</label>
-                        <div class="blox">
-                           <input type="range" min="1" max="100" value="50">
-                           <input type="radio">
-                           <input type="range">
+                        <div class="check-line">
+                           <div class="block__progress">
+                              <div></div>
+                           </div>
+
+                           <label for="h-radio-1" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">0</lable>
+                              </div>
+                              <input type="radio" name="demo" value="1" id="h-radio-1" required data-radio="0">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio-2" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">1</lable>
+                              </div>
+                              <input type="radio" name="demo" value="1" id="h-radio-2" required data-radio="20">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio-3" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">2</lable>
+                              </div>
+                              <input type="radio" name="demo" value="1" id="h-radio-3" required data-radio="40">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio-4" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">3</lable>
+                              </div>
+                              <input type="radio" name="demo" value="1" id="h-radio-4" required data-radio="60">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio-5" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">4</lable>
+                              </div>
+                              <input type="radio" name="demo" value="1" id="h-radio-5" required data-radio="80">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio-5" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">4+</lable>
+                              </div>
+                              <input type="radio" name="demo" value="1" id="h-radio-5" required data-radio="110">
+                              <span class="radio"></span>
+                           </label>
                         </div>
                      </div>
-                  </div> -->
+                  </div>
                   <!-- <div class="rules-form-item">
-                     <div class="rules-form-label">Ваш ежемесячный чистый доход от вашего проекта?</div>
+                     <div class="rules-form-item-difference">
+                        <div class="rules-form-label">Ваш ежемесячный чистый доход от вашего проекта?</div>
+                        <div class="check2-line">
+                           <div class="block2__progress">
+                              <div></div>
+                           </div>
+
+                           <label for="h-radio2-1" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">Начинающий<br>предприниматель</lable>
+                              </div>
+                              <input type="radio" name="demo2" value="1" id="h-radio2-2" required data2-radio="0">
+                              <span class="radio radio-span">1</span>
+                           </label>
+
+                           <label for="h-radio2-2" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">1</lable>
+                              </div>
+                              <input type="radio" name="demo2" value="1" id="h-radio2-2" required data2-radio="20">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio2-3" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">1</lable>
+                              </div>
+                              <input type="radio" name="demo2" value="1" id="h-radio2-3" required data2-radio="40">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio2-4" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">1</lable>
+                              </div>
+                              <input type="radio" name="demo2" value="1" id="h-radio2-4" required data2-radio="60">
+                              <span class="radio radio-span"></span>
+                           </label>
+
+                           <label for="h-radio2-5" class="rules-form-radio">
+                              <div class="label-mb">
+                                 <lable class="form-label-radio">1</lable>
+                              </div>
+                              <input type="radio" name="demo" value="1" id="h-radio2-5" required data2-radio="80">
+                              <span class="radio"></span>
+                           </label>
+                        </div>
+                     </div>
                   </div> -->
                   <div class="rules-form-item">
                      <div class="rules-form-item-point">
                         <label class="rules-form-label">Как вы планируете проходить наставничество?</label>
                         <label for="radio-1" class="rules-form-radio">
                            <input type="radio" name="demo" value="1" id="radio-1" required>
-                           <span class="radio"></span>
+                           <span class="radio radio-span"></span>
                            <lable class="form-label-radio">Офлайн</lable>
                         </label>
                         <label for="radio-n" class="rules-form-radio">
                            <input type="radio" name="demo" value="1" id="radio-n" required>
-                           <span class="radio"></span>
+                           <span class="radio radio-span"></span>
                            <lable class="form-label-radio">Онлайн</lable>
                         </label>
                      </div>
@@ -127,19 +222,14 @@
                         <label class="rules-form-label">Ваш статус?</label>
                         <label for="radio-3" class="rules-form-radio radio-block">
                            <input type="radio" name="demo2" value="1" id="radio-3" required>
-                           <span class="radio"></span>
+                           <span class="radio radio-span"></span>
                            <lable class="form-label-radio">Запуск (для предпринимателей до 300 тыс./мес.)</lable>
                         </label>
                         <label for="radio-4" class="rules-form-radio radio-block">
                            <input type="radio" name="demo2" value="1" id="radio-4" required>
-                           <span class="radio"></span>
+                           <span class="radio radio-span"></span>
                            <lable class="form-label-radio">Прорыв (300+ тыс./мес.)</lable>
                         </label>
-                        <!-- <label for="radio-4" class="rules-form-radio radio-block">
-                           <input type="radio" name="demo2" value="1" id="radio-4" required>
-                           <span class="radio"></span>
-                           <label class="form-label-radio">Прорыв (300+ тыс./мес.)</label>
-                        </label> -->
                      </div>
                   </div>
                   <div class="rules-form-item">
@@ -151,7 +241,7 @@
                         <div class="rules-form-content">
                            <div id="myDIV" class="rules-form-tabs">
                               <nav class="rules-form-columns">
-                                 <a href="#tab_01" class="rules-form-column active">
+                                 <div class="rules-form-column js-tab-trigger" data-tab="1">
                                     <div class="rules-form-column-icon">
                                        <img src="images/tab-1.png" alt="user">
                                     </div>
@@ -166,8 +256,8 @@
                                           Продажа сел/хоз оборудования
                                        </div>
                                     </div>
-                                 </a>
-                                 <a href="#tab_02" class="rules-form-column">
+                                 </div>
+                                 <div class="rules-form-column active js-tab-trigger" data-tab="2">
                                     <div class="rules-form-column-icon">
                                        <img src="images/tab-2.png" alt="user">
                                     </div>
@@ -182,8 +272,8 @@
                                           Маркетинговое агенство
                                        </div>
                                     </div>
-                                 </a>
-                                 <a href="#tab_03" class="rules-form-column">
+                                 </div>
+                                 <div class="rules-form-column js-tab-trigger" data-tab="3">
                                     <div class="rules-form-column-icon">
                                        <img src="images/tab-3.png" alt="user">
                                     </div>
@@ -198,8 +288,8 @@
                                           Компания “Мастера ремонта”
                                        </div>
                                     </div>
-                                 </a>
-                                 <a href="#tab_04" class="rules-form-column">
+                                 </div>
+                                 <div class="rules-form-column js-tab-trigger" data-tab="4">
                                     <div class="rules-form-column-icon">
                                        <img src="images/tab-3.png" alt="user">
                                     </div>
@@ -211,8 +301,8 @@
                                           Система
                                        </div>
                                     </div>
-                                 </a>
-                                 <a href="#tab_05" class="rules-form-column">
+                                 </div>
+                                 <div class="rules-form-column js-tab-trigger" data-tab="5">
                                     <div class="rules-form-column-icon">
                                        <img src="images/tab-3.png" alt="user">
                                     </div>
@@ -227,8 +317,8 @@
                                           Выводит на wildberries
                                        </div>
                                     </div>
-                                 </a>
-                                 <a href="#tab_06" class="rules-form-column">
+                                 </div>
+                                 <div class="rules-form-column js-tab-trigger" data-tab="6">
                                     <div class="rules-form-column-icon">
                                        <img src="images/tab-3.png" alt="user">
                                     </div>
@@ -240,13 +330,13 @@
                                           Система
                                        </div>
                                     </div>
-                                 </a>
+                                 </div>
                               </nav>
                               <div class="rules-form-body">
                                  <label class="rules-form-label rules-form-body-title">
                                     Подробнее о наставнике
                                  </label>
-                                 <div id="tab_01" class="rules-form-block">
+                                 <div class="rules-form-block js-tab-content" data-tab="1">
                                     <div class="rules-form-block-top">
                                        <div class="rules-form-block-icon">
                                           <img src="images/tab-3.png" alt="Роман Шевелев">
@@ -309,7 +399,7 @@
                                        </div>
                                     </div>
                                  </div>
-                                 <div id="tab_02" class="rules-form-block">
+                                 <div class="rules-form-block active js-tab-content" data-tab="2">
                                     <div class="rules-form-block-top">
                                        <div class="rules-form-block-icon">
                                           <img src="images/user-1.png" alt="Роман Шевелев">
@@ -371,7 +461,7 @@
                                        </div>
                                     </div>
                                  </div>
-                                 <div id="tab_03" class="rules-form-block">
+                                 <div class="rules-form-block js-tab-content" data-tab="3">
                                     <div class="rules-form-block-top">
                                        <div class="rules-form-block-icon">
                                           <img src="images/tab-3.png" alt="Роман Шевелев">
@@ -433,7 +523,7 @@
                                        </div>
                                     </div>
                                  </div>
-                                 <div id="tab_04" class="rules-form-block">
+                                 <div class="rules-form-block js-tab-content" data-tab="4">
                                     <div class="rules-form-block-top">
                                        <div class="rules-form-block-icon">
                                           <img src="images/tab-3.png" alt="Роман Шевелев">
@@ -492,7 +582,7 @@
                                        </div>
                                     </div>
                                  </div>
-                                 <div id="tab_05" class="rules-form-block">
+                                 <div class="rules-form-block js-tab-content" data-tab="5">
                                     <div class="rules-form-block-top">
                                        <div class="rules-form-block-icon">
                                           <img src="images/tab-3.png" alt="Роман Шевелев">
@@ -554,7 +644,7 @@
                                        </div>
                                     </div>
                                  </div>
-                                 <div id="tab_06" class="rules-form-block">
+                                 <div class="rules-form-block js-tab-content" data-tab="6">
                                     <div class="rules-form-block-top">
                                        <div class="rules-form-block-icon">
                                           <img src="images/tab-3.png" alt="Роман Шевелев">
@@ -617,6 +707,9 @@
                            </div>
                         </div>
                      </div>
+                     <div class="boxz" data-tab="1"></div>
+                     <div class="boxz" data-tab="2"></div>
+                     <div class="boxz" data-tab="3"></div>
                   </div>
 
                </div>
