--- a/site-8/index.html
+++ b/site-8/index.html
@@ -10,23 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/animate.css" />
-	<!-- bootstrap -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<!-- font-awesome icon -->
-	<link rel="stylesheet" href="css/font-awesome.min.css" />
-	<!-- themify-icons -->
-	<link rel="stylesheet" href="css/themify-icons.css" />
-	<!-- owl carousel -->
-	<link rel="stylesheet" href="css/owl.transitions.css" />
-	<link rel="stylesheet" href="css/owl.carousel.css" />
-	<!-- magnific popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css" />
-	<!-- base -->
-	<link rel="stylesheet" href="css/base.css" />
-	<!-- elements -->
-	<link rel="stylesheet" href="css/elements.css" />
-	<!-- responsive -->
-	<link rel="stylesheet" href="css/responsive.css" />
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -75,7 +59,7 @@
 						</h1>
 					</div>
 					<div class="row justify-content-between align-items-center">
-						<div class="col-md-5">
+						<div class="col-xl-5 col-md-12">
 							<div class="hero-items">
 								<p class="hero-items-title">
 									Laske hinta ja katso toimitusaika-arvio
@@ -108,7 +92,7 @@
 
 							</div>
 						</div>
-						<div class="col-md-6">
+						<div class="col-xl-6 col-md-12">
 							<div class="hero-info">
 								<h2 class="hero-info-title title">
 									Configure. Price. Quote.
@@ -144,8 +128,7 @@
 			<section class="digitize">
 				<div class="container">
 					<div class="row align-items-center">
-						<div
-							class="digitize-left col-md-7 col-sm-12 col-xs-12 title-small xs-title-medium sm-margin-nine-bottom xs-margin-fifteen-bottom text-dark-gray">
+						<div class="digitize-left col-xl-7 col-md-12">
 							<h2 class="digitize-title title">
 								Digitalisoi koko myyntiprosessi
 							</h2>
@@ -153,7 +136,7 @@
 								Summium® tuoteperheen avulla
 							</p>
 						</div>
-						<div class="digitize-info col-md-5 col-sm-12 col-xs-12 text-medium">
+						<div class="digitize-info col-xl-5 col-md-12">
 							<p class="digitize-info-text">
 								Summium digitaalinen myyntialusta yhdistää asiakkaan<br>
 								ja myyjän yhteen myyntiprosessiin kokonaan uudella tavalla.<br>Tee tarjouksia asiakkaalta
@@ -163,7 +146,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="digitize-items">
+						<!-- <div class="digitize-items">
 							<div class="digitize-items-left">
 								<img src="images/digitize-1.jpg" alt="">
 								<div class="digitize-items-texts">
@@ -221,14 +204,14 @@
 								</div>
 							</div>
 
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
 			<section class="summium">
 				<div class="container">
 					<div class="row">
-						<div class="summium-info col-md-6">
+						<div class="summium-info col-lg-6 col-md-12">
 							<div class="summium-overtitle">
 								Käyttötarkoituksesta riippuen
 							</div>
@@ -247,7 +230,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="summium-images col-md-6">
+						<div class="summium-images col-lg-6 col-md-12">
 							<img src="images/summium.png" alt="">
 						</div>
 					</div>
@@ -395,7 +378,7 @@
 						</h2>
 					</div>
 					<div class="row">
-						<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="col-col-md-3 col-xl-3 col-xs-12md-4 col-sm-6 col-xs-12 function-item">
 							<span class="benefits-numbers">
 								01.
 							</span>
@@ -417,7 +400,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="col-col-md-3 col-xl-3 col-xs-12md-4 col-sm-6 col-xs-12 function-item">
 							<span class="benefits-numbers">
 								02.
 							</span>
@@ -439,7 +422,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="col-col-md-3 col-xl-3 col-xs-12md-4 col-sm-6 col-xs-12 function-item">
 							<span class="benefits-numbers">
 								03.
 							</span>
@@ -461,7 +444,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="col-col-md-3 col-xl-3 col-xs-12md-4 col-sm-6 col-xs-12 function-item">
 							<span class="benefits-numbers">
 								04.
 							</span>
@@ -508,7 +491,7 @@
 				<div class="container">
 
 					<div class="row justify-content-center">
-						<div class="col-lg-5">
+						<div class="col-lg-12">
 							<h2 class="price-title">
 								Laske hinta
 							</h2>
@@ -547,7 +530,7 @@
 			<section class="faq">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-md-12">
 							<h2 class="faq-title">
 								Frequently Asked Questions
 							</h2>
