--- a/site-8/index.html
+++ b/site-8/index.html
@@ -145,7 +145,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<!-- <div class="digitize-items">
 							<div class="digitize-items-left">
 								<img src="images/digitize-1.jpg" alt="">
@@ -205,7 +205,7 @@
 							</div>
 
 						</div> -->
-					</div>
+					</div> -->
 				</div>
 			</section>
 			<section class="summium">
