--- a/site-8/index.html
+++ b/site-8/index.html
@@ -26,13 +26,9 @@
 							<img src="images/logo.png" alt="logo">
 						</a>
 					</div>
-					<nav class="header-menu navbar-expand-lg">
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-							data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-							aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon"></span>
-						</button>
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<div class="header-burger menu">
+						<div class="header-burger-icon active"><span></span></div>
+						<nav class="header-burger-body active">
 							<ul class="header-menu-list mb-2 mb-lg-0">
 								<li class="header-menu-item">
 									<a href="#" class="header-menu-link">Etusivu</a>
@@ -44,7 +40,23 @@
 									<a href="#" class="header-menu-link">laske hinta</a>
 								</li>
 							</ul>
-						</div>
+						</nav>
+					</div>
+					<nav class="header-menu">
+
+
+						<ul class="header-menu-list mb-2 mb-lg-0">
+							<li class="header-menu-item">
+								<a href="#" class="header-menu-link">Etusivu</a>
+							</li>
+							<li class="header-menu-item">
+								<a href="#" class="header-menu-link">Referenssit</a>
+							</li>
+							<li class="header-menu-item">
+								<a href="#" class="header-menu-link">laske hinta</a>
+							</li>
+						</ul>
+
 					</nav>
 				</div>
 			</div>
@@ -145,8 +157,8 @@
 							</p>
 						</div>
 					</div>
-					<!-- <div class="row">
-						<!-- <div class="digitize-items">
+					<div class="row">
+						<div class="digitize-items">
 							<div class="digitize-items-left">
 								<img src="images/digitize-1.jpg" alt="">
 								<div class="digitize-items-texts">
@@ -204,8 +216,8 @@
 								</div>
 							</div>
 
-						</div> -->
-					</div> -->
+						</div>
+					</div>
 				</div>
 			</section>
 			<section class="summium">
@@ -475,14 +487,16 @@
 						Referenssit
 					</h2>
 					<div class="row">
-						<div class="literature-card col-md-4 col-sm-4 col-xs-12 text-center xs-margin-fifteen-bottom">
-							<img src="images/literature.png" alt="literature">
-						</div>
-						<div class="literature-card col-md-4 col-sm-4 col-xs-12 text-center xs-margin-fifteen-bottom">
-							<img src="images/literature.png" alt="literature">
-						</div>
-						<div class="literature-card col-md-4 col-sm-4 col-xs-12 text-center xs-margin-fifteen-bottom">
-							<img src="images/literature.png" alt="literature">
+						<div class="literature-cards">
+							<div class="literature-card">
+								<img src="images/literature.png" alt="literature">
+							</div>
+							<div class="literature-card">
+								<img src="images/literature.png" alt="literature">
+							</div>
+							<div class="literature-card">
+								<img src="images/literature.png" alt="literature">
+							</div>
 						</div>
 					</div>
 				</div>
@@ -625,20 +639,16 @@
 							Tietosuojaseloste
 						</a>
 					</div>
-
 				</div>
 			</div>
+		</footer>
 	</div>
-	</div>
-	</footer>
-	</div>
-
-
 	<script src="js/main.js"></script>
 	<!-- <script src="js/bootstrap.min.js"></script> -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-		crossorigin="anonymous"></script> -->
+		crossorigin="anonymous"></script>
+
 </body>
 
 </html>
