--- a/site-8/index.html
+++ b/site-8/index.html
@@ -28,7 +28,7 @@
 					</div>
 					<div class="header-burger menu">
 						<div class="header-burger-icon active"><span></span></div>
-						<nav class="header-burger-body active">
+						<nav class="header-burger-body">
 							<ul class="header-menu-list mb-2 mb-lg-0">
 								<li class="header-menu-item">
 									<a href="#" class="header-menu-link">Etusivu</a>
